[gd_scene load_steps=6 format=2]

[ext_resource path="res://sprites/pipe-green.png" type="Texture" id=1]
[ext_resource path="res://Pipes.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 22.5, 159 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 22, 157 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 23, 92 )

[node name="Pipes" type="Node2D"]
script = ExtResource( 2 )

[node name="Bottom" type="Area2D" parent="."]
position = Vector2( 311, 506 )
collision_layer = 2
collision_mask = 2
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Bottom"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bottom"]
position = Vector2( -0.5, 1 )
shape = SubResource( 8 )

[node name="Top" type="Area2D" parent="."]
position = Vector2( 309, 5 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Top"]
rotation = 3.14159
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Top"]
position = Vector2( -2, -1 )
shape = SubResource( 9 )

[node name="Score" type="Area2D" parent="."]
position = Vector2( 292, 176 )
collision_layer = 2
collision_mask = 2
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Score"]
position = Vector2( 19, 80 )
shape = SubResource( 10 )

[connection signal="body_entered" from="Bottom" to="." method="_on_Bottom_body_entered"]
[connection signal="body_entered" from="Top" to="." method="_on_Top_body_entered"]
[connection signal="body_exited" from="Score" to="." method="_on_Score_body_exited"]
